Well, you should be able to run netscape again.  if a window duplicates itself
in the taskbar again after this commit, PLEASE let me know.

-------------------------------------------------------------------------------

Mon Sep 20 13:59:58 PDT 1999
(Mandrake)

added important TODO item for kde support :

mandrake:   um, don't use close from the kpanel menu right yet.  that's a bad idea.  in fact, I wouldn't use ANY of the kpanel windowops things yet.  (nasty)


-------------------------------------------------------------------------------

Mon Sep 20 15:20:56 PDT 1999
(Mandrake)

more kde fixes.  more to come, still.  this fixes using client.win instead of
base win for most everything.

-------------------------------------------------------------------------------

Mon Sep 20 19:23:42 EDT 1999
(Christian)

Added Ganymede, finally. Noticed one little bug in it: In the
Desktop Background Settings there's a single transparent line
on the bottom. Couldn't work my way around it.

Sorted the list of window borders in the 'Set Border Style'
menu.

Added some group issues to TODO file. I hope I get to finish that
during this week.


-------------------------------------------------------------------------------

Mon Sep 20 19:41:17 PDT 1999
(Mandrake)

yet more kde fixes.  Hopefully most of the window operations menu in kpanel
 should work now

-------------------------------------------------------------------------------

Mon Sep 20 20:14:35 PDT 1999
(Mandrake)

removed todo item, added new TODO item

-------------------------------------------------------------------------------

Mon Sep 20 21:30:28 PDT 1999
(Mandrake)

fixed the desktop changing bug in kde support.  (oops)

-------------------------------------------------------------------------------

Tue Sep 21 10:13:48 PDT 1999
(Mandrake)

fixed some problems with kde notifications on events.  all of these things
should be accounted for now.  It looks like all of panel pretty much works
out-of-box.