@@ -7,7 +7,7 @@ print "prepping files for cvs using indent.\n";
 $names{mandrake} = "Mandrake";
 $names{raster} = "Raster";
 $names{mej} = "KainX";
-$names{cK} = "Christian";
+$names{elwood} = "Christian";
 
 # username -> indentstyle translations
 $indents{raster} = "indent -i3 -bl -bad -nbap -sob -ncdb -di20 -nbc -lp -nce -npcs -sc -ncs -l80";
